--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+.dropdown {
+    @apply text-2xl font-semibold text-white;
+}
+
+@keyframes dropdownEnter {
+    from { opacity: 0; transform: translateX(100%); }
+    to { opacity: 1; transform: translateX(0); }
+}
+
+@keyframes dropdownExit {
+    from { opacity: 1; transform: translateX(0); }
+    to { opacity: 0; transform: translateX(100%); }
+}
+
+@keyframes menuItemEnter {
+    from { opacity: 0;}
+    to { opacity: 1;}
+}
+
+@keyframes menuItemExit {
+    from { opacity: 1; transform: translateX(0); }
+    to { opacity: 0; transform: translateX(50px); }
+}
+
+.dropdown-enter {
+    animation: dropdownEnter 300ms ease-out forwards;
+}
+
+.dropdown-exit {
+    animation: dropdownExit 300ms ease-in forwards;
+}
+
+.menu-item-enter {
+    animation: menuItemEnter 100ms ease-out forwards;
+    opacity: 0;
+}
+
+.menu-item-exit {
+    animation: menuItemExit 300ms ease-in forwards;
+}
