--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,3 +61,9 @@
     padding: 15px;
   }
 }
+
+@media (min-width: 750px) {
+    .card-col {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+}
