--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -4,3 +4,15 @@ input[readonly] {
     -webkit-text-fill-color: #333;
     opacity: 1;
   }
+
+  @media (min-width: 630px) and (max-width: 1023px) {
+    .form-container {
+      width: 50% !important;
+    }
+  }
+
+  @media (min-width: 631px) and (max-width: 700px) {
+    .form-container {
+      width: 60% !important;
+    }
+  }
