--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,3 +67,21 @@
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 }
+
+@media ((min-width: 320px) and (max-width: 350px)){
+    .herotext1 {
+        font-size: x-small;
+        line-height: 1rem;
+    }
+    .gap1 {
+        gap: 1rem;
+    }
+}
+
+@media ((min-width: 500px) and (max-width: 640px)) {
+    .herotext1 {
+        font-size: small;
+        line-height: 1.25rem;
+    }
+}
+
