--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/funkrocker');
+@import url('https://fonts.cdnfonts.com/css/dark-graffiti-2?styles=163802');
                 
 @tailwind base;
 @tailwind components;
