--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,8 +48,7 @@
 }
 
 .canvas-container {
-  width: 50%;
-  padding: 20px;
+  width: 90%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -58,10 +57,9 @@
   border-radius: 16px;
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 768px) {
   .canvas-container {
-    width: 70%;
-    padding: 15px;
+    width: 44rem;
   }
 }
 
