--- a/client/src/pages/TitleAnimation.css
+++ b/client/src/pages/TitleAnimation.css
@@ -4,7 +4,7 @@
   border-radius: 100px;
   align-items: center;
   position: relative;
-  padding: 0 5px;
+  /* padding: 0 5px; */
   display: flex;
   height: 40px;
 }
